--- a/frontend/fresh-fish-online/package.json
+++ b/frontend/fresh-fish-online/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "flowbite": "^1.6.5",
+    "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5"
