--- a/frontend/fresh-fish-online/package.json
+++ b/frontend/fresh-fish-online/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hennge/vue3-pagination": "^1.0.17",
     "axios": "^1.3.5",
     "flowbite": "^1.6.5",
     "pinia": "^2.0.35",
